--- a/pages/ff136.md
+++ b/pages/ff136.md
@@ -9,6 +9,31 @@ external_manifest_url:
 <!-- Add an essay or interpretive material below this line,
 using HTML or markdown.  Do not modify this file above this line -->
 <p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
+<p style="text-align:center"><img src="http://departments.knox.edu/newsarchive/news_events/img/2002/houston_baker_s.jpg"></p>
+<h1 style="text-align:center">Houston A. Baker, Jr.</h1>
+<hr>
+<p>Houston Baker is a literary and cultural theorist, poet, historian, and educator who has worked to integrate theories of black aesthetics and modernism into the white exclusionary and racist spaces of academia. Through his work in literary criticism in the 1970s and ‘80s, Baker has helped to redefine modernism, placing the Harlem Renaissance at its core, and has given theories of vernacular and oral cultural production due importance and authority. As Richard J. Lane notes of Baker, "in interrogating and mapping the black aesthetic, Baker has taught critics new ways of reading literature in general".<a href="#fn1"><sup>[1]</sup></a></p>
+<p>Among Baker’s published works are his <i>Black Literature in America</i>, one of the first comprehensive anthologies of Black writers, <i>Modernism and the Harlem Renaissance</i>, and <i>Betrayal: How Black Intellectuals have Abandoned the Ideals of the Civil Rights Era</i>, which received an American Book Award. His poetry collections include <i>No Matter Where You Travel, You Still Be Black</i> and <i>Passing Over</i>. He was the first African American to serve as the president of the Modern Language Association, and is currently the Distinguished University Professor of English at Vanderbilt University.</p>
+<p>Baker’s collection <i>No Matter Where you Travel, You Still be Black</i> carries the themes of wandering, dislocation, and search through his condensed portraits and landscapes. The numerous dedications make his first book of poems a deeply personal meditation on literary and scholarly solidarity, friendship, and love. His later collection, <i>Passing Over</i>, explores the vibrant music and healing silences of nature as a deep wound is mended. As Toi Derricotte notes in her review, "Charting a journey through despair and back to love, Houston Baker proves the grace of poetry."
+<a href="#fn2"><sup>[2]</sup></a><hr>
+<p> <a href="https://furiousflower.org/jerry-ward-jr">Jerry W. Ward, Jr.</a> is a poet and scholar who has published poetry collections, such as <i>Fractal Song</i>, as well as essays and critical reviews in publications such as <i>Callaloo</i>, <i>The Southern Quarterly</i>, and <i>New Orleans Review</i>. He has edited several major anthologies, has won multiple awards for his work, and was inducted into the <i>International Literary Hall of Fame for Writers of African Descent</i> in 2001. He retired from his position at Dillard University in 2012, and  currently serves on the board of Kansas University’s Project on the History of Black Writing.</p>
+<p>In this interview with Jerry Ward, Houston Baker discusses his experiences of academia in the 1970s, his first book of poetry, Rap as a form of artistic production deserving critical and scholarly attention, and his pedagogical practices in teaching the younger generation of emerging poets and scholars.</p>
+
+<hr>
+
+<h3>More Information</h3>
+<b>Interviews:</b>
+<ul><li><p><a href="https://www.jstor.org/stable/2904136">Interview</a> with Jerry W. Ward, Jr. from 1982. Discusses difference between philosophy and theory, the racism of white theorists and critics claiming to have "universal" paradigms for literary theory, and the stakes and methods of forming a Black aesthetic paradigm.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/10.5149/9781469627724_matthew.5">Interview</a> with Ayanna Jackson-Fowler. Discuss Baker’s experience of tokenization, his response and stance against racism in white academia, and his advice to minority scholars and students.</p></li></ul> 
+
+<b>Essays:</b>
+<ul><li><p><a href="https://www.jstor.org/stable/3041685">"Spike Lee and the Commerce of Culture"</a>: Baker analyzes two of Spike Lee’s early films, describing his aesthetic, narrative, and ideological investments at this time in Lee’s career.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/26443973">Intuiting Archive: Notes for a Post-Trauma Poetics</a>: Baker compares the notion of the archive as it appears in Hurston and Derrida. </p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/26360782">"The Black Bottom Line: Reflections on Ferguson, Black Lives Matter, and White Male Violence in America"</a>: Baker links contemporary white male violence to his economic concept of the "Black bottom line", and the history of settler colonialism and slavery in the U.S. Concludes with a short reading list of timely historical-literary analyses.
+<hr>
+<p><a name="fn1">[1]</a>:Lane, Richard J. <i>Fifty Key Literary Theorists</i>. New York: Routledge, 2006.</p>
+<p><a name="fn2">[2]</a>:Baker, Houston A., Jr. <i>Passing Over</i>. Detroit: Lotus Press, 2000.</p>
+
 <hr>
 <h3>Preferred Citation:</h3>
 <i>Houston Baker Interview, 9/23/2004 (FF136)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF136. Collection finding aid: <a href="https://aspace.lib.jmu.edu/repositories/4/resources/487">https://aspace.lib.jmu.edu/repositories/4/resources/487</a>.
