--- a/pages/ff136.md
+++ b/pages/ff136.md
@@ -24,7 +24,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <h3>More Information</h3>
 <b>Interviews:</b>
 <ul><li><p><a href="https://www.jstor.org/stable/2904136">Interview</a> with Jerry W. Ward, Jr. from 1982. Discusses difference between philosophy and theory, the racism of white theorists and critics claiming to have "universal" paradigms for literary theory, and the stakes and methods of forming a Black aesthetic paradigm.</p></li></ul>
-<ul><li><p><a href="https://www.jstor.org/stable/10.5149/9781469627724_matthew.5">Interview</a> with Ayanna Jackson-Fowler. Discuss Baker’s experience of tokenization, his response and stance against racism in white academia, and his advice to minority scholars and students.</p></li></ul> 
+<ul><li><p><a href="https://www.jstor.org/stable/10.5149/9781469627724_matthew.5">Interview</a> with Ayanna Jackson-Fowler. Discuss the tokenization of Black scholars by academic institutions, his response and stance against racism in a predominantly white academia, and his advice to minority scholars and students.</p></li></ul> 
 
 <b>Essays:</b>
 <ul><li><p><a href="https://www.jstor.org/stable/3041685">"Spike Lee and the Commerce of Culture"</a>: Baker analyzes two of Spike Lee’s early films, describing his aesthetic, narrative, and ideological investments at this time in Lee’s career.</p></li></ul>
