--- a/pages/ff136.md
+++ b/pages/ff136.md
@@ -29,7 +29,9 @@ using HTML or markdown.  Do not modify this file above this line -->
 <b>Essays:</b>
 <ul><li><p><a href="https://www.jstor.org/stable/3041685">"Spike Lee and the Commerce of Culture"</a>: Baker analyzes two of Spike Lee’s early films, describing his aesthetic, narrative, and ideological investments at this time in Lee’s career.</p></li></ul>
 <ul><li><p><a href="https://www.jstor.org/stable/26443973">"Intuiting Archive: Notes for a Post-Trauma Poetics"</a>: Baker compares the notion of the archive as it appears in Hurston and Derrida. </p></li></ul>
-<ul><li><p><a href="https://www.jstor.org/stable/26360782">"The Black Bottom Line: Reflections on Ferguson, Black Lives Matter, and White Male Violence in America"</a>: Baker links contemporary white male violence to his economic concept of the "Black bottom line", and the history of settler colonialism and slavery in the U.S. Concludes with a short reading list of timely historical-literary analyses.
+<ul><li><p><a href="https://www.jstor.org/stable/26360782">"The Black Bottom Line: Reflections on Ferguson, Black Lives Matter, and White Male Violence in America"</a>: Baker links contemporary white male violence to his economic concept of the "Black bottom line", and the history of settler colonialism and slavery in the U.S. Concludes with a short reading list of timely historical-literary analyses.</p></li></ul>
+  <b>Other:</b>
+<ul><li><p>Houston Baker's<a href="https://as.vanderbilt.edu/aads/people/houston-baker.php">Faculty page</a> for Vanderbilt University.</p></li></ul>
 <hr>
 <p><a name="fn1">[1]</a>:Lane, Richard J. <i>Fifty Key Literary Theorists</i>. New York: Routledge, 2006.</p>
 <p><a name="fn2">[2]</a>:Baker, Houston A., Jr. <i>Passing Over</i>. Detroit: Lotus Press, 2000.</p>
