--- a/pages/ff142.md
+++ b/pages/ff142.md
@@ -10,6 +10,45 @@ external_manifest_url:
 using HTML or markdown.  Do not modify this file above this line -->
 <p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
 <hr>
+<p style="text-align:center"><img src="https://api.poets.org/sites/default/files/styles/poem_a_day_portrait/public/images/biographies/YusefKomunyakaa_NewBioImage.jpg?itok=LWv9d5hi"></p>
+<h1 style="text-align:center">Yusef Komunyakaa</h1>
+<hr>
+
+<hr>
+<p>Yusef Komunyakaa is an internationally renowned poet and educator. For decades, he has offered complex and vivid portraits to students and readers dealing with themes of war, nationality, racism, and their intersections. As Toi Derricotte notes, "Komunyakaa takes on the most complex moral issues, the most harrowingly ugly subjects of our American life. His voice, whether it embodies the specific experiences of a black man, a soldier in Vietnam, or a child in Bogalusa, Louisiana, shows us in ever deepening ways what it is to be human."<a href="#fn1"><sup>[1]</sup></a> His deep impact on the literary world continues to resonate through the forms, styles, and personae he employs across his work.</p>
+<p>Komunyakaa’s mastery of musical and embodied language is clear throughout his work. He has described his earlier collections, such as <i>Copacetic</i> as "tonal, visual kinds of collages"<a href="#fn2"><sup>[2]</sup></a>, though he notes that their wide variety of topics and forms make them difficult to categorize. In his later work, including <i>Talking Dirty to the Gods</i> and <i>The Emperor of Water Clocks</i>, his poetry takes on a vivid surrealism.</p>
+<p>The formal aspects of his poetry range from jazz-influenced free verse to the precise compression and exact silences of traditional poetic forms. As he notes in an interview with Malin Pereira: "The poem is a composite of symbols and silences".<a href="#fn3"><sup>[3]</sup></a> In his collaborations with musicians, Komunyakaa has written librettos for the operas <i>Slip Knot</i> and <i>Wakonda’s Dream</i>, as well as performance pieces such as <i>The Reincarnated Beethoven</i>.</p>
+<p>Komunyakaa has received numerous awards for his poetry, including the Pulitzer Prize for poetry for his collection <i>Neon Vernacular</i>, the Ruth Lilly Poetry Prize, and the Kingsley Tufts Poetry Award, to name only a few. He is currently a professor of English at NYU.</p>
+<hr>
+<p>In this interview, Yusef Komunyakaa and Tony Bolden discuss language as music, the knowledge contained in the body, carpentry and poetic form, as well as Komunyakaa’s artistic process.</p>
+<hr>
+
+<h3>More Information:</h3>
+
+<b>Interviews:</b>
+<ul><li><p><a href="https://fightandfiddle.com/2018/05/01/the-complexity-of-being-human-an-interview-with-yusef-komunyakaa/">The Complexity of Being Human</a>: An interview with Lauren K. Alleyne. Komunyakaa discusses how he teaches poetry, as well as his thoughts on translation, music, and racism. A concise critical introduction to Komunyakaa’s voice, style, and influence is included.</p></li></ul>
+<ul><li><p><a href="https://teachersandwritersmagazine.org/the-singing-underneath-878.htm">The Singing Underneath</a>: An interview with Christian McEwen. Komunyakaa discusses his observant childhood, the close ties music and poetry share, and his ability to adopt various personae.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/3805718
+">Interview</a> with G. F. Mitrando. They discuss Komunyakaa’s childhood, the art of musical and linguistic improvisation, other poets, and the intersections of race and class.</p></li></ul>
+
+
+<b>Essays:</b>
+<ul><li><p><a href="https://www.jstor.org/stable/10.3998/mpub.9462628.17
+">"Dark Waters"</a>: by Yusef Komunyakaa. Connects racism in medicine, science, and economics to a history of environmental racism in the U.S.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/10.3998/mpub.9462628.12
+">"The Blue Machinery of Summer"</a>: by Yusef Komunyakaa. A short autobiographical piece taking place in 1979, portraying the lingering psychological and social legacy of the Vietnam war.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/10.3998/mpub.9462628.7">"Sorrow Songs and Flying Away: Religious Influence on Black Poetry"</a>: on the radical resistance of Sorrow Songs and the flight motif, and how they influenced the development of Black poetry.</p></li></ul>
+
+<b>Poetry:</b>
+<ul><li><p><a href="https://www.poetryfoundation.org/poets/yusef-komunyakaa?msclkid=fd7c90c9b50211ecbd6bcdbeba960748">Collection</a> of poems by Komunyakaa. Includes a brief biography.</p></li></ul>
+<b>Other:</b>
+<ul><li><p>Yusef Komunyakaa’s<a href="https://as.nyu.edu/content/nyu-as/as/faculty/yusef-komunyakaa.html?msclkid=67247d62b68911eca908dc4db39603bf"> New York University faculty page</a></p></li></ul>
+<hr>
+<p><a name="fn1">[1]</a>Derricotte, Toi, and Yusef Komunyakaa. "Seeing and Re-Seeing: An Exchange between Yusef Komunyakaa and Toi Derricotte." <i>Callaloo</i> 28, no. 3 (2005): 513–18. http://www.jstor.org/stable/3805717.</p>
+<p><a name="fn2">[2]</a>Komunyakaa, Yusef, and Shirley A. J. Hanshaw. <i>Conversations with Yusef Komunyakaa</i>, 20. Jackson: University Press of Mississippi, 2010.</p>
+<p><a name="fn3">[3]</a>Pereira, Malin, Wanda Coleman, Yusef Komunyakaa, Rita Dove, Harryette Mullen, Thylias Moss, Cornelius Eady, Cyrus Cassells, and Elizabeth Alexander. "Yusef Komunyakaa." In <i>Into a Light Both Brilliant and Unseen: Conversations with Contemporary Black Poets</i>, 45–68. University of Georgia Press, 2010. http://www.jstor.org/stable/j.ctt46nh3m.6.</p>
+
+
 <h3>Preferred Citation:</h3>
 <i>Yusef Komunyakaa Interview, 9/24/2004 (FF142)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF142. Collection finding aid: <a href="https://aspace.lib.jmu.edu/repositories/4/resources/487">https://aspace.lib.jmu.edu/repositories/4/resources/487</a>.
 <hr>
