--- a/pages/ff142.md
+++ b/pages/ff142.md
@@ -44,9 +44,9 @@ using HTML or markdown.  Do not modify this file above this line -->
 <b>Other:</b>
 <ul><li><p>Yusef Komunyakaa’s<a href="https://as.nyu.edu/content/nyu-as/as/faculty/yusef-komunyakaa.html?msclkid=67247d62b68911eca908dc4db39603bf"> New York University faculty page</a></p></li></ul>
 <hr>
-<p><a name="fn1">[1]</a>Derricotte, Toi, and Yusef Komunyakaa. "Seeing and Re-Seeing: An Exchange between Yusef Komunyakaa and Toi Derricotte." <i>Callaloo</i> 28, no. 3 (2005): 513–18. http://www.jstor.org/stable/3805717.</p>
-<p><a name="fn2">[2]</a>Komunyakaa, Yusef, and Shirley A. J. Hanshaw. <i>Conversations with Yusef Komunyakaa</i>, 20. Jackson: University Press of Mississippi, 2010.</p>
-<p><a name="fn3">[3]</a>Pereira, Malin, Wanda Coleman, Yusef Komunyakaa, Rita Dove, Harryette Mullen, Thylias Moss, Cornelius Eady, Cyrus Cassells, and Elizabeth Alexander. "Yusef Komunyakaa." In <i>Into a Light Both Brilliant and Unseen: Conversations with Contemporary Black Poets</i>, 45–68. University of Georgia Press, 2010. http://www.jstor.org/stable/j.ctt46nh3m.6.</p>
+<p><a name="fn1">[1]</a>: Derricotte, Toi, and Yusef Komunyakaa. "Seeing and Re-Seeing: An Exchange between Yusef Komunyakaa and Toi Derricotte." <i>Callaloo</i> 28, no. 3 (2005): 513–18. http://www.jstor.org/stable/3805717.</p>
+<p><a name="fn2">[2]</a>: Komunyakaa, Yusef, and Shirley A. J. Hanshaw. <i>Conversations with Yusef Komunyakaa</i>, 20. Jackson: University Press of Mississippi, 2010.</p>
+<p><a name="fn3">[3]</a>: Pereira, Malin, Wanda Coleman, Yusef Komunyakaa, Rita Dove, Harryette Mullen, Thylias Moss, Cornelius Eady, Cyrus Cassells, and Elizabeth Alexander. "Yusef Komunyakaa." In <i>Into a Light Both Brilliant and Unseen: Conversations with Contemporary Black Poets</i>, 45–68. University of Georgia Press, 2010. http://www.jstor.org/stable/j.ctt46nh3m.6.</p>
 
 
 <h3>Preferred Citation:</h3>
