--- a/pages/ff140.md
+++ b/pages/ff140.md
@@ -9,6 +9,37 @@ external_manifest_url:
 <!-- Add an essay or interpretive material below this line,
 using HTML or markdown.  Do not modify this file above this line -->
 <p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
+<p style="text-align:center"><img src="https://www.peepaltreepress.com/sites/default/files/styles/author_large/public/Velma%20Pollard_1.jpg?itok=jEijaSw2"></p>
+<h1 style="text-align:center">Velma Pollard</h1>
+<hr>
+
+
+<p>Velma Pollard is a Jamaican poet and educator. She attended the University College of the West Indies for her undergraduate studies, where she studied alongside many now renowned poets. Until her recent retirement, Pollard served as a professor of UWI at Mona, and served as the Dean of the Faculty of Education. She has published multiple poetry collections, including <i>Shame Trees Don’t Grow Here</i> and <i>Leaving Traces</i>. She has also published multiple short story collections, and a novella, <i>Karl and Other Stories</i>, which won the <i>Casa de las Americas</i> award in 1992.</p>
+<p>In her collection, <i>Shame Trees Don’t Grow Here</i>, Pollard emphasizes the importance of cultivating moral consciousness, and the consequences of neglecting it. Her poems cover the destructive forces of colonialism and capitalism on indigenous populations, her experiences in the U.S. and England, and descriptions of Caribbean landscapes. She continues these themes in <i>The Best Philosophers I Know Can’t Read or Write</i>, infusing her personal poems with Caribbean history, and reimagining pre-colonial indigenous cultures. She also reimagines the traditional wisdom of African folktales and proverbs.</p>
+<p>In addition to her works of literature, she has published essays in journals such as <i>Callaloo</i> and <i>Carribean Quarterly</i>, and a linguistic study on Dread Talk and its relation to Rastafarianism.</p>
+<hr>
+<p>In this interview with Daryl Dance, Velma Pollard discusses her friendships and connections with many well-known Caribbean poets, her experience teaching in the United States, her writing process, and the themes of her poetry.</p>
+<p>Daryl Dance is an educator, specializing in African American folklore, who earned her Ph.D. at the University of Virginia. She taught at Virginia Commonwealth University and the University of Richmond for decades. She has published several works, including <i>Shuckin’ and Jivin’</i> and <i>Long Gone</i>. In 2013, she was named the Sterling A. Brown Professor of English at Howard University. In 2011, the Daryl Cumber Dance Lifetime Achievement Award was established in her honor through the CLA.</p>
+
+
+
+<hr>
+<h3>More Information:</h3>
+
+<b>Interviews:</b>
+<ul><li><p><a href="https://www.jstor.org/stable/44325219
+">Interview</a> with Daryl Dance. Pollard discusses the ideas of exile and return in poetry and everyday life, representation of Black voices in children’s literature, and recurring themes in her poems.</p></li></ul>
+
+<b>Essays:</b>
+<ul><li><p><a href="https://www.jstor.org/stable/40655242
+">"Writing Bridges of Sound: Praise Song for The Widow and Louisiana"</a>: Pollard compares Paule Marshall and Erna Brodber’s evocations of African diasporic connections through music and poetic sound.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/40795020">"Dread Talk: The Speech of the Rastafarian in Jamaica"</a>: A linguistic and cultural study of Dread Talk as a means of opposing the political oppression of Rastafarians. Pollard includes a short word list to demonstrate this reality, and explores the way Dread Talk resists the formations of Jamaican Standard English.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/40653399
+">"The Dust – a Tribute to the Folk"</a>: An exploration and celebration of Carribean folkways, and the deep truth they lend to literature and life philosophy.</p></li></ul>
+
+<b>Poetry:</b>
+<ul><li><p><a href="https://poetryarchive.org/poet/velma-pollard">Collection</a> of  poems by Pollard. Includes a short biographical introduction, and audio of Pollard reading.</p></li></ul>
+
 <hr>
 <h3>Preferred Citation:</h3>
 <i>Velma Pollard Interview, 9/23/2004 (FF140)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF140. Collection finding aid: <a href="https://aspace.lib.jmu.edu/repositories/4/resources/487">https://aspace.lib.jmu.edu/repositories/4/resources/487</a>.
