--- a/pages/ff142.md
+++ b/pages/ff142.md
@@ -21,6 +21,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <p>Komunyakaa has received numerous awards for his poetry, including the Pulitzer Prize for poetry for his collection <i>Neon Vernacular</i>, the Ruth Lilly Poetry Prize, and the Kingsley Tufts Poetry Award, to name only a few. He is currently a professor of English at NYU.</p>
 <hr>
 <p>In this interview, Yusef Komunyakaa and Tony Bolden discuss language as music, the knowledge contained in the body, carpentry and poetic form, as well as Komunyakaa’s artistic process.</p>
+<p><a href="https://afs.ku.edu/people/anthony-bolden">Tony Bolden</a> is an essayist and a professor of African and African-American Studies at the University of Kansas. His essays have been published in the <i>CLA Journal</i>, <i>African American Review</i>, and <i>Obsidian</i>. He recently published a book, <i>Groove Theory: The Blues Foundation of Funk</i>.</p>
 <hr>
 
 <h3>More Information:</h3>
