--- a/pages/ff031.md
+++ b/pages/ff031.md
@@ -20,7 +20,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <p>Dr. Eleanor W. Traylor is an educator, essayist, and critic of African American literature. She earned her Ph.D. in English from the Catholic University of America in 1976. In her long career as an educator, she has served as Professor Emeritus and former chair of the English Department at Howard University, and has taught at Georgetown University, Tougaloo College, and Cornell. She has edited multiple anthologies of African American literature, co-written textbooks, and served as a consultant to multiple museums. Among her numerous honors are the Hazel Jones Bryant Award, the Marcus Garvey Award, and an Honorary Doctorate of Letters from Howard University.</p>
 <p style="text-align:center"><img src="https://furiousflower.org/wp-content/uploads/2019/03/Elizabeth-Alexander-Cropped-923x1024.jpg"></p>
 <p style="text-align:center"><b>Elizabeth Alexander</b></p>
-<p>Dr. Elizabeth Alexander is a poet, educator, essayist, and cultural advocate. In 2008, she read her poem "Praise Song for the Day" for the inauguration of President Barack Obama.  Her published works include <i>Venus Hottentot</i>, <i>Body of Life</i>, and <i>American Sublime</i>, which was a finalist for the Pulitzer Prize in 2015. She has taught at Columbia and Yale University, and currently serves as the president of the Andrew W. Mellon Foundation. Her work touches on a wide variety of themes, including meditations on popular culture, reclamations of Black female sexuality, and projects of historical recovery.</p>
+<p>Dr. Elizabeth Alexander is a poet, educator, essayist, and cultural advocate. In 2008, she read her poem "Praise Song for the Day" for the inauguration of President Barack Obama.  Her published works include <i>Venus Hottentot</i>, <i>Body of Life</i>, and <i>American Sublime</i>, which was a finalist for the Pulitzer Prize in 2015. She has taught at Columbia and Yale University, and currently serves as the president of the Andrew W. Mellon Foundation. Her work touches on a wide variety of themes, including meditations on popular culture, reclamations of sexuality, and projects of historical recovery.</p>
 <p style="text-align:center"><img src="https://furiousflower.org/wp-content/uploads/2019/03/Sherley-Anne-Williams-Cropped-665x1024.jpg"></p>
 <p style="text-align:center"><b>Sherley Anne Williams</b></p>
 <p>Sherley Anne Williams was a poet, novelist, educator, and social critic. She earned her M.A. in English from Brown University in 1972, and went on to teach at Sweet Briar College and Stanford University. Among her published works are <i>The Peacock Poems</i>, which was nominated for a Pulitzer Prize and a National Book Award, her novel <i>Dessa Rose</i>, and her collection <i>Someone Sweet Angel Chile</i>, which Williams won an Emmy Award for in its television adaptation. She also wrote children’s books, including <i>Picking Cotton</i>, which won the Caldecott Honor Book and the Coretta Scott King Book Award. Her work touches on the great difficulty and inequity she endured in her childhood and being a single mother. Her poetry  often incorporates the rhythms and forms of jazz.</p>
