--- a/_manifests/ff031.md
+++ b/_manifests/ff031.md
@@ -1,6 +1,6 @@
 ---
 layout: manifest
-title: FF031_African American Poetry and the Vernacular Matrix
+title: FF031_African American Poetry and the Vernacular Matrix Part 3, 9/29/1994
 manifest_name: ff031
 
 ---
