--- a/pages/ff010.md
+++ b/pages/ff010.md
@@ -11,9 +11,9 @@ using HTML or markdown.  Do not modify this file above this line -->
 <p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
 <hr>
 <h3>Preferred Citation:</h3> 
-<i>Furious Flower Poetry Center Overview Part 1, 6/20/2011 (FF010)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made to document the Furious Flower Poetry Center events outside of the decennial meetings. Part of the Furious Flower Poetry Center Records, 1990-2019, UA 0017, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF010. Collection finding aid: <a href="https://aspace.lib.jmu.edu/repositories/4/resources/488">https://aspace.lib.jmu.edu/repositories/4/resources/488</a>.
+<i>Furious Flower Poetry Center Overview Part 1, 6/20/2011 (FF010)</i>. Transcribed and edited by Evan Sizemore, 2021-2022, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made to document the Furious Flower Poetry Center events outside of the decennial meetings. Part of the Furious Flower Poetry Center Records, 1990-2019, UA 0017, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF010. Collection finding aid: <a href="https://aspace.lib.jmu.edu/repositories/4/resources/488">https://aspace.lib.jmu.edu/repositories/4/resources/488</a>.
 <hr>
 <h3>Browser Directions:</h3> 
-Audio playback is activated by the timestamped annotation section you click in. Search field will find any word or phrase in the Transcription, Speaker or Environment annotation layers. Annotation layers can be ordered by Time (default), Annotation contents or Annotation layer labels by selecting the up/down arrows on the right. Speaker and Transcription layers are matching color-coded to facilitate reading.
+Audio and video playback is activated by the timestamped annotation section you click in. Search field will find any word or phrase in the Transcription, Speaker or Environment annotation layers. Annotation layers can be ordered by Time (default), Annotation contents or Annotation layer labels by selecting the up/down arrows on the right. Speaker and Transcription layers are matching color-coded to facilitate reading.
 
 
