--- a/pages/ff136.md
+++ b/pages/ff136.md
@@ -38,7 +38,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 
 <hr>
 <h3>Preferred Citation:</h3>
-<i>Houston Baker Interview, 9/23/2004 (FF136)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF136. Collection finding aid: <a href="https://aspace.lib.jmu.edu/repositories/4/resources/487">https://aspace.lib.jmu.edu/repositories/4/resources/487</a>.
+<i>Houston Baker Interview, 9/23/2004 (FF136)</i>. Transcribed and edited by Evan Sizemore, 2021-2022, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF136. Collection finding aid: <a href="https://aspace.lib.jmu.edu/repositories/4/resources/487">https://aspace.lib.jmu.edu/repositories/4/resources/487</a>.
 <hr>
 <h3>Browser Directions:</h3> 
-Audio playback is activated by the timestamped annotation section you click in. Search field will find any word or phrase in the Transcription, Speaker or Environment annotation layers. Annotation layers can be ordered by Time (default), Annotation contents or Annotation layer labels by selecting the up/down arrows on the right. Speaker and Transcription layers are matching color-coded to facilitate reading.
+Audio and video playback is activated by the timestamped annotation section you click in. Search field will find any word or phrase in the Transcription, Speaker or Environment annotation layers. Annotation layers can be ordered by Time (default), Annotation contents or Annotation layer labels by selecting the up/down arrows on the right. Speaker and Transcription layers are matching color-coded to facilitate reading.
