--- a/pages/ff136.md
+++ b/pages/ff136.md
@@ -27,7 +27,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <ul><li><p><a href="https://www.jstor.org/stable/10.5149/9781469627724_matthew.5">Interview</a> with Ayanna Jackson-Fowler. Discuss the tokenization of Black scholars by academic institutions, his response and stance against racism in a predominantly white academia, and his advice to minority scholars and students.</p></li></ul> 
 
 <b>Essays:</b>
-<ul><li><p><a href="https://www.jstor.org/stable/3041685">"Spike Lee and the Commerce of Culture"</a>: Baker analyzes two of Spike Lee’s early films, describing his aesthetic, narrative, and ideological investments at this time in Lee’s career.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/3041685">"Spike Lee and the Commerce of Culture"</a>: Baker analyzes two of Spike Lee’s films, describing the aesthetic, narrative, and ideological investments appearing early in Lee’s career.</p></li></ul>
 <ul><li><p><a href="https://www.jstor.org/stable/26443973">"Intuiting Archive: Notes for a Post-Trauma Poetics"</a>: Baker compares the notion of the archive as it appears in Hurston and Derrida. </p></li></ul>
 <ul><li><p><a href="https://www.jstor.org/stable/26360782">"The Black Bottom Line: Reflections on Ferguson, Black Lives Matter, and White Male Violence in America"</a>: Baker links contemporary white male violence to his economic concept of the "Black bottom line", and the history of settler colonialism and slavery in the U.S. Concludes with a short reading list of timely historical-literary analyses.</p></li></ul>
   <b>Other:</b>
