--- a/pages/ff019.md
+++ b/pages/ff019.md
@@ -36,7 +36,7 @@ In her collection <i>Thomas and Beulah</i>, Dove explores the intersection betwe
 <ul><li><p><a href="https://www.poetryfoundation.org/poets/rita-dove">Selection</a> of poems. Resource also includes bibliography of Dove’s works, lyrics, and publications in periodical journals.</p></li></ul>
 <ul><li><p><a href="https://poets.org/poet/rita-dove">Selection</a> of poetry containing works from across Dove’s literary career.</p></li></ul>
 <b>Other:</b>
-<ul><li><p><a href="https://achievement.org/achiever/rita-dove">Academy of Achievement</a> page, including an interview and a biography including pictures.</p></li></ul>
+<ul><li><p><a href="https://achievement.org/achiever/rita-dove">Academy of Achievement</a> page, including an interview and a biography.</p></li></ul>
 <ul><li><p><a href="https://youtu.be/mao8itrJafI">Documentary</a> on Rita Dove, directed by Eduardo Montes-Bradley. Focuses on Dove’s childhood, her family history, her love of music, and her writing process.</p></li></ul>
 <hr>
 <p><a name="fn1">[1]</a>:Stein, Kevin. "Lives in Motion: Multiple Perspectives in Rita Dove’s Poetry." Mississippi Review 23, no. 3 (1995): 51–79.</p>
