--- a/pages/ff142.md
+++ b/pages/ff142.md
@@ -16,11 +16,11 @@ using HTML or markdown.  Do not modify this file above this line -->
 
 <hr>
 <p>Yusef Komunyakaa is an internationally renowned poet and educator. For decades, he has offered complex and vivid portraits to students and readers dealing with themes of war, nationality, racism, and their intersections. As Toi Derricotte notes, "Komunyakaa takes on the most complex moral issues, the most harrowingly ugly subjects of our American life. His voice, whether it embodies the specific experiences of a black man, a soldier in Vietnam, or a child in Bogalusa, Louisiana, shows us in ever deepening ways what it is to be human."<a href="#fn1"><sup>[1]</sup></a> His deep impact on the literary world continues to resonate through the forms, styles, and personae he employs across his work.</p>
-<p>Komunyakaa’s mastery of musical and embodied language is clear throughout his work. He has described his earlier collections, such as <i>Copacetic</i> as "tonal, visual kinds of collages"<a href="#fn2"><sup>[2]</sup></a>, though he notes that their wide variety of topics and forms make them difficult to categorize. In his later work, including <i>Talking Dirty to the Gods</i> and <i>The Emperor of Water Clocks</i>, his poetry takes on a vivid surrealism.</p>
-<p>The formal aspects of his poetry range from jazz-influenced free verse to the precise compression and exact silences of traditional poetic forms. As he notes in an interview with Malin Pereira: "The poem is a composite of symbols and silences".<a href="#fn3"><sup>[3]</sup></a> In his collaborations with musicians, Komunyakaa has written librettos for the operas <i>Slip Knot</i> and <i>Wakonda’s Dream</i>, as well as performance pieces such as <i>The Reincarnated Beethoven</i>.</p>
+<p>Komunyakaa’s mastery of the musical and embodied dimesnions of language is clear throughout his work. He has described his earlier collections, such as <i>Copacetic</i> as "tonal, visual kinds of collages,"<a href="#fn2"><sup>[2]</sup></a> though he notes that their wide variety of topics and forms make them difficult to categorize. In his later work, including <i>Talking Dirty to the Gods</i> and <i>The Emperor of Water Clocks</i>, his poetry takes on a striking surrealism.</p>
+<p>The formal aspects of his poetry range from jazz-influenced free verse to the precise compression and exact silences of traditional poetic forms. As he notes in an interview with Malin Pereira: "The poem is a composite of symbols and silences."<a href="#fn3"><sup>[3]</sup></a> In his collaborations with musicians, Komunyakaa has written librettos for the operas <i>Slip Knot</i> and <i>Wakonda’s Dream</i>, as well as performance pieces such as <i>The Reincarnated Beethoven</i>.</p>
 <p>Komunyakaa has received numerous awards for his poetry, including the Pulitzer Prize for poetry for his collection <i>Neon Vernacular</i>, the Ruth Lilly Poetry Prize, and the Kingsley Tufts Poetry Award, to name only a few. He is currently a professor of English at NYU.</p>
 <hr>
-<p>In this interview, Yusef Komunyakaa and Tony Bolden discuss language as music, the knowledge contained in the body, carpentry and poetic form, as well as Komunyakaa’s artistic process.</p>
+<p>In this interview, Yusef Komunyakaa and Tony Bolden discuss language as music, the knowledge contained in the body, the parallels between carpentry and poetic form, as well as Komunyakaa’s artistic process.</p>
 <p><a href="https://afs.ku.edu/people/anthony-bolden">Tony Bolden</a> is an essayist and a professor of African and African-American Studies at the University of Kansas. His essays have been published in the <i>CLA Journal</i>, <i>African American Review</i>, and <i>Obsidian</i>. He recently published a book, <i>Groove Theory: The Blues Foundation of Funk</i>.</p>
 <hr>
 
@@ -45,9 +45,9 @@ using HTML or markdown.  Do not modify this file above this line -->
 <b>Other:</b>
 <ul><li><p>Yusef Komunyakaa’s<a href="https://as.nyu.edu/content/nyu-as/as/faculty/yusef-komunyakaa.html?msclkid=67247d62b68911eca908dc4db39603bf"> New York University faculty page</a></p></li></ul>
 <hr>
-<p><a name="fn1">[1]</a>: Derricotte, Toi, and Yusef Komunyakaa. "Seeing and Re-Seeing: An Exchange between Yusef Komunyakaa and Toi Derricotte." <i>Callaloo</i> 28, no. 3 (2005): 513–18. http://www.jstor.org/stable/3805717.</p>
+<p><a name="fn1">[1]</a>: Derricotte, Toi, and Yusef Komunyakaa. "Seeing and Re-Seeing: An Exchange between Yusef Komunyakaa and Toi Derricotte." <i>Callaloo</i> 28, no. 3 (2005): 513–18.</p>
 <p><a name="fn2">[2]</a>: Komunyakaa, Yusef, and Shirley A. J. Hanshaw. <i>Conversations with Yusef Komunyakaa</i>, 20. Jackson: University Press of Mississippi, 2010.</p>
-<p><a name="fn3">[3]</a>: Pereira, Malin, Wanda Coleman, Yusef Komunyakaa, Rita Dove, Harryette Mullen, Thylias Moss, Cornelius Eady, Cyrus Cassells, and Elizabeth Alexander. "Yusef Komunyakaa." In <i>Into a Light Both Brilliant and Unseen: Conversations with Contemporary Black Poets</i>, 45–68. University of Georgia Press, 2010. http://www.jstor.org/stable/j.ctt46nh3m.6.</p>
+<p><a name="fn3">[3]</a>: Pereira, Malin, Wanda Coleman, Yusef Komunyakaa, Rita Dove, Harryette Mullen, Thylias Moss, Cornelius Eady, Cyrus Cassells, and Elizabeth Alexander. "Yusef Komunyakaa." In <i>Into a Light Both Brilliant and Unseen: Conversations with Contemporary Black Poets</i>, 45–68. University of Georgia Press, 2010.</p>
 
 
 <h3>Preferred Citation:</h3>
