--- a/pages/ff143.md
+++ b/pages/ff143.md
@@ -15,7 +15,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <p>Sonia Sanchez is a poet, playwright, educator, storyteller, womanist, and revolutionary. She has a voice that bridges generations. She was instrumental in the Black Arts Movement of the ‘60s and ‘70s, and has continued to publish impactful, widely influential works of poetry ever since. She has visited hundreds of colleges and universities to teach and spread her poetry and philosophy, and traveled to many countries to read with the same mission. As she notes concerning a poet's role, ”above all what we do is try to keep us human.”<a href="#fn1"><sup>[1]</sup></a></p>
 <p>In her long and prolific career, Sanchez has reforged poetic forms such as the haiku and tanka to better fit her calls of and for radical love. She has bridged the gap between personal and political art forms, blurring the line between self-discovery, political activism, and spiritual teaching. Dr. Joanne Gabbin has referred to Sonia Sanchez’s message as “one of redeeming realism” and “gemlike intensity”.<a href="#fn2"><sup>[2]</sup></a></p>
 <p>Sanchez’s groundbreaking application of jazz improvisation techniques and everyday language in her collection <i>We a BaddDDD People</i> opened new possibilities of musical and linguistic fusion in spoken word poetry and rap. In her revolutionary womanism, Sanchez also explores the many varied connections and disconnections between love and sexuality. She lets the joy of their union and the pain of their disjunction show through the experimental forms in collections such as <i>I’ve Been a Woman</i> and <i>Homegirls and Handgrenades</i>.</p>
-<p>Among the many honors she has received are <i>The Lucretia Mott Award</i>, <i>The Langston Hughes Poetry Award</i>, and <i>The Leeway Foundation Transformational Award</i>, to note only a few. Most recently, she has won the $250,000 Gish Prize for pushing the boundaries of poetic form, and for her contributions to social change.</p>
+<p>Among the many honors she has received are <i>The Lucretia Mott Award</i>, <i>The Langston Hughes Poetry Award</i>, and <i>The Leeway Foundation Transformational Award</i>, to note only a few. Most recently, she has won the $250,000 Gish Prize for pushing the boundaries of poetic form, for her contributions to social change, and for her fearless truth-telling.</p>
 <hr>
 <p>In this interview with Dr. Joanne V. Gabbin, Sonia Sanchez discusses how Black poetry and literature transformed the dominant narratives in academia, the U.S., and the world, emphasizes the importance of global solidarity, and demonstrates the power that poetry has to educate, inspire, and counter misrepresentation in politics and the media.</p>
 <hr>
@@ -23,12 +23,12 @@ using HTML or markdown.  Do not modify this file above this line -->
 <b>Interviews:</b>
 <ul><li><p><a href="https://www.jstor.org/stable/26446152">Interview</a>  with Susan Kelly. Sonya discusses the literary culture of Harlem in the ‘60s, her involvement with the Nation of Islam, how she conducted the first college course on African American Women’s Literature, and what it took to resist and combat attempts to erase the historical events, Black poetry, literature, and political philosophy of the ‘60s, ‘70s, and beyond.</p></li></ul>
 <ul><li><p><a href="https://bostonreview.net/articles/sonia-sanchez-christina-knight-straight-down-bones">Interview</a> with Christina Knight. Discuss Sanchez’s ancestral influences, Sanchez confronting racism in academia, the job market, and the libraries in her time as a student.</p></li></ul>
-<ul><li><p><a href="https://www.jstor.org/stable/40545827">Interview</a> with India Dennis-Mahmood. Sanchez and Dennis-Mahmood touch on the history of these feminisms, the struggles and influence of Black students on predominantly white campuses, and how modernism isn’t honest about its origins in the art of the African Diaspora.</p></li></ul>
-<ul><li><p><a href="https://vimeo.com/409889566">Interview</a> video, with Major Jackson. Touches on Sanchez's childhood, her writing process, her acquaintance by Amiri Baraka, and the love of teaching.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/40545827">Interview</a> with India Dennis-Mahmood. Sanchez and Dennis-Mahmood touch on the history of these feminisms, the struggles and influence of Black students on predominantly white campuses, and how theorists of modernism are often dishonest about its origins in the art of the African Diaspora.</p></li></ul>
+<ul><li><p><a href="https://vimeo.com/409889566">Video Interview</a>, with Major Jackson. Touches on Sanchez's childhood, her writing process, her acquaintance by Amiri Baraka, and the love of teaching.</p></li></ul>
 <b>Essays:</b>
 <ul><li><p><a href="https://www.jstor.org/stable/41067138">”The Poet as a Creator of Social Values”</a>: Essay written by Sanchez in the ‘80s. She discusses the history of poetic language from its early forms to its racist distortion by white settlers, to the resistance and reclamation poets in the African Diaspora have effected.</p></li></ul>  
 <ul><li><p><a href="https://www.jstor.org/stable/j.ctt130hrvp.8">”Sonia Sanchez: The Will and the Spirit”</a>: Essay on Sanchez’s work, and an interview with D.H. Melhem covering Sanchez’s childhood practice of poetry writing, her musical influences, and the performance of poems.</p></li></ul>
-<ul><li><p><a href="https://www.jstor.org/stable/24350370">”Black Magic Woman: Sonia Sanchez and her Work”</a>: Essay from the early ‘70s discussing the multiple directions that Sanchez’s impact on the Black Arts Movement were taking. Contains several excerpts of Sanchez’s contemporary poems, with analysis.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/24350370">”Black Magic Woman: Sonia Sanchez and her Work”</a>: Essay from the early ‘70s discussing the multiple directions that Sanchez’s impact on the Black Arts Movement were taking. Contains several excerpts of Sanchez’s contemporary poems, with analyses.</p></li></ul>
 <b>Poems and readings:</b>
 <ul><li><p><a href="https://poets.org/poet/sonia-sanchez">Selection</a> includes several haikus, among other poems.</p></li></ul>
 <ul><li><p><a href="https://www.afropoets.net/soniasanchez.html">Selection</a> contains an excellent tracing of Sanchez’s style as it transforms across her publications. Also includes selected poems.</p></li></ul>
