image links to Libraries server

--- a/pages/ff019.md
+++ b/pages/ff019.md
@@ -8,9 +8,9 @@ external_manifest_url:
 ---
 <!-- Add an essay or interpretive material below this line,
 using HTML or markdown.  Do not modify this file above this line -->
-<p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/furious-flower-logo.jpg"></p>
 <hr>
-<p style="text-align:center"><img src="https://furiousflower.org/wp-content/uploads/2019/04/rita.jpg"></p>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/rita_dove.jpg"></p>
 <h1 style="text-align:center">Rita Dove</h1>
 <hr>
 <p> Rita Dove is a writer, poet, educator, musician, and public figure. Among her published works are <i>Thomas and Beulah</i>, for which she was awarded the Pulitzer Prize, <i>American Smooth</i>, and her most recent collection, <i>Playlist for the Apocalypse</i>. She has won numerous awards and honors, and served as the U.S. Poet Laureate from 1993 to 1995. She has been teaching at the University of Virginia since 1989. Her collections of poetry reflect her many passions, including languages, ballroom dancing, history, and music. 
