add image links to Libraries server

--- a/pages/ff136.md
+++ b/pages/ff136.md
@@ -8,8 +8,8 @@ external_manifest_url:
 ---
 <!-- Add an essay or interpretive material below this line,
 using HTML or markdown.  Do not modify this file above this line -->
-<p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
-<p style="text-align:center"><img src="http://departments.knox.edu/newsarchive/news_events/img/2002/houston_baker_s.jpg"></p>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/furious-flower-logo.jpg"></p>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/houston_baker.jpg"></p>
 <h1 style="text-align:center">Houston A. Baker, Jr.</h1>
 <hr>
 <p>Houston Baker is a literary and cultural theorist, poet, historian, and educator who has worked to integrate theories of black aesthetics and modernism into the white exclusionary and racist spaces of academia. Through his work in literary criticism in the 1970s and ‘80s, Baker has helped to redefine modernism, placing the Harlem Renaissance at its core, and has given theories of vernacular and oral cultural production due importance and authority. As Richard J. Lane notes of Baker, "in interrogating and mapping the black aesthetic, Baker has taught critics new ways of reading literature in general".<a href="#fn1"><sup>[1]</sup></a></p>
