add image links to Libraries server

--- a/pages/ff140.md
+++ b/pages/ff140.md
@@ -8,8 +8,8 @@ external_manifest_url:
 ---
 <!-- Add an essay or interpretive material below this line,
 using HTML or markdown.  Do not modify this file above this line -->
-<p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
-<p style="text-align:center"><img src="https://www.peepaltreepress.com/sites/default/files/styles/author_large/public/Velma%20Pollard_1.jpg?itok=jEijaSw2"></p>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/furious-flower-logo.jpg"></p>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/velma_pollard.jpg"></p>
 <h1 style="text-align:center">Velma Pollard</h1>
 <hr>
 
